Fixed line spacing and margins

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -213,38 +213,48 @@ font-family: 'Open Sans', 'sans-serif'
 
 .header {
   text-align: center;
-      margin-bottom: .5em !important;
-          font-family: 'Montserrat',sans-serif !important;
+    margin-bottom: .5em !important;
+    font-family: 'Montserrat',sans-serif !important;
     font-size: 32px;
     color: #000;
     font-weight: bold;
-        text-rendering: auto;
+    text-rendering: auto;
     line-height: 1.3 !important;
     margin: 0 0 .75em 0 !important;
     padding: 0;
 }
 
 .subheadings {
-      font-size: 20px;
+    font-size: 20px;
     color: #444;
-     font-family: 'Open Sans',Arial,sans-serif !important;
+    font-family: 'Open Sans',Arial,sans-serif !important;
     font-weight: bold !important;
-        text-rendering: auto;
-    line-height: 1.3 !important;
+    text-rendering: auto;
+     line-height: 1.3 !important;
     margin: 0 0 .75em 0 !important;
     padding: 0;
-        box-sizing: border-box;
-   
+   box-sizing: border-box;
     transition: all .2s ease;
 }
-.paragraph {
+
+.qualifications {
+  font-family: 'Open Sans',Arial,sans-serif !important;
   text-align: left;
-      font-size: 16px;
-    line-height: 1.9;
-    margin: 0 0 1.2em 0 !important;
-    color: #000;
-        transition: all .2s ease;
+  font-size: 16px;
+
 }
+
+.client {
+  font-family: 'Open Sans',Arial,sans-serif !important;
+  text-align: left;
+  font-size: 16px;
+   line-height: 5px;
+  margin: 0 0 1.2em 0 !important;
+  color: #000;
+  transition: all .2s ease;
+}
+
+
 
 // Offerings Page
 /* Style the buttons that are used to open and close the accordion panel */
